# ni-watcher

./: .env  .gitignore  Cargo.toml  Readme.md  install.bat
src/: main.rs
